--- a/requirements.txt
+++ b/requirements.txt
@@ -6,48 +6,71 @@ autoray==0.6.3
 backcall==0.2.0
 cachetools==5.3.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 comm==0.1.3
+cryptography==40.0.2
 debugpy==1.6.7
 decorator==5.1.1
+dill==0.3.5.1
 executing==1.2.0
+fastdtw==0.3.4
 future==0.18.3
 idna==3.4
 importlib-metadata==6.6.0
 ipykernel==6.22.0
 ipython==8.12.0
 jedi==0.18.2
+joblib==1.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 matplotlib-inline==0.1.6
+mpmath==1.3.0
 nest-asyncio==1.5.6
 networkx==3.1
+ntlm-auth==1.5.0
 numpy==1.23.5
 packaging==23.1
 parso==0.8.3
+pbr==5.11.1
 PennyLane==0.29.1
 PennyLane-Lightning==0.29.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.3.0
+ply==3.11
 prompt-toolkit==3.0.38
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.15.1
 python-dateutil==2.8.2
 pyzmq==25.0.2
+qiskit==0.42.1
+qiskit-aer==0.12.0
+qiskit-ibmq-provider==0.20.2
+qiskit-machine-learning==0.6.0
+qiskit-terra==0.23.3
 requests==2.28.2
+requests-ntlm==1.1.0
 retworkx==0.12.1
 rustworkx==0.12.1
+scikit-learn==1.2.2
 scipy==1.10.1
 semantic-version==2.10.0
 six==1.16.0
 stack-data==0.6.2
+stevedore==5.0.0
+symengine==0.10.0
+sympy==1.11.1
+threadpoolctl==3.1.0
 toml==0.10.2
 tornado==6.3.1
 traitlets==5.9.0
 typing_extensions==4.5.0
 urllib3==1.26.15
 wcwidth==0.2.6
+websocket-client==1.5.1
+websockets==11.0.2
 zipp==3.15.0
