--- a/requirements.txt
+++ b/requirements.txt
@@ -9,21 +9,27 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 comm==0.1.3
+contourpy==1.0.7
 cryptography==40.0.2
+cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 dill==0.3.5.1
 executing==1.2.0
 fastdtw==0.3.4
+fonttools==4.39.3
 future==0.18.3
 idna==3.4
 importlib-metadata==6.6.0
+importlib-resources==5.12.0
 ipykernel==6.22.0
 ipython==8.12.0
 jedi==0.18.2
 joblib==1.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mpmath==1.3.0
 nest-asyncio==1.5.6
@@ -37,6 +43,7 @@ PennyLane==0.29.1
 PennyLane-Lightning==0.29.0
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.5.0
 platformdirs==3.3.0
 ply==3.11
 prompt-toolkit==3.0.38
@@ -45,6 +52,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.15.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pyzmq==25.0.2
 qiskit==0.42.1
